Fri Jun  9 18:26:50 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Wed May 24 11:11:45 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* gss-client.c: Include string.h or strings.h

	* gss-server.c: Include string.h or strings.h

	* configure.in: Check for string.h

Mon May 22 15:41:33 EDT 1995	Paul Park	(pjpark@mit.edu)
	* gss-server.c	: (server_establish_context) Don't call gss_release_
			  buffer right after gss_accept_sec_context because
			  in the event that we choke, we lose the minor status

Fri Apr 28 15:30:00 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (gss-client): Use $(LD) instead of $(CC) so that we can
		do purify checking.

	* gss-server.c (main, sign_server): Make changes to allow
		gss-server to be fired out of inetd.  New options: -inetd
		and -logfile.  The -logfile allows the output of
		gss-server to be redirected to a file.

	* gss-misc.c (send_token, recv_token, display_status_1): Add
	        support for -logfile option.  If the external FILE
		*display_file is set, redirect error messages to
		display_file instead of stderr.

Wed Apr 26 17:17:22 1995  Mark Eichin  <eichin@cygnus.com>

	* configure.in: use AC_CONST since we don't learn it from the krb5
	headers and gssapi.h uses it.

Thu Mar  2 12:29:50 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 11:55:15 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Remove ISODE_INCLUDE, replace check for -lsocket
		and -lnsl with WITH_NETLIB check.

Fri Feb  3 06:21:02 1995  Theodore Y. Ts'o  (tytso@dcl)

	* gss-server.c: ret_flags should be an int based on the prototype
		of gss_accept_sec_context.

Wed Oct 19 12:32:41 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Obey CCOPTS in CFLAGS declaration

Wed Oct 12 02:29:38 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Add OBJS definition so that object files get